# spacy-address

./: .gitignore  README.md  config.cfg  eval.py  gen_examples.ipynb  justfile  labels.py  nerf.py  pyproject.toml  test.ipynb  xml2spacy.py
data/: dev.nerf  train.nerf
models/lg/: README.md  config.cfg  meta.json
models/sm/: README.md  config.cfg  meta.json
src/spacy_address/: __init__.py
tests/: conftest.py  test_basic.py
