[project]
name = "spacy-address"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "spacy-streamlit>=1.0.6",
    "spacy>=3.8.2",
]

[tool.uv]
dev-dependencies = [
    "build",
    "ipykernel",
    "pip",
    "pytest",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "torch>=2.4.1",
]
